apps/homelab/linkwarden/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: linkwarden
  name: linkwarden
