apps/homelab/linkwarden/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: linkwarden
  namespace: linkwarden
  labels: &labels
    app.kubernetes.io/name: linkwarden
    app.kubernetes.io/component: bookmarks
    app.kubernetes.io/instance: linkwarden
    app.kubernetes.io/part-of: linkwarden
    app.kubernetes.io/version: "latest"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: linkwarden
      app.kubernetes.io/instance: linkwarden
  template:
    metadata:
      labels: *labels
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.12.8
          imagePullPolicy: IfNotPresent
        - name: linkwarden
          image: ghcr.io/linkwarden/linkwarden:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - containerPort: 3000
              name: http
      restartPolicy: Always
---
