apps/homelab/linkwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  namespace: linkwarden
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-dns
spec:
  rules:
    - host: linkwarden.homelab.rookian.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linkwarden
                port:
                  number: 80
  tls:
    - hosts:
        - linkwarden.homelab.rookian.dev
      secretName: tls-linkwarden-homelab
